<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tamanio_letra"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/titulo">


        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/nombre"
            android:inputType="text"/>
        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/apellido"
            android:inputType="text"/>
        <EditText
            android:id="@+id/editDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/dni"
            android:inputType="number"/>
        <EditText
            android:id="@+id/editCui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/cui"
            android:inputType="number"/>
        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/correo"
            android:inputType="text"/>
        <EditText
            android:id="@+id/editEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/edad"
            android:inputType="number"/>
        <EditText
            android:id="@+id/editFacultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/facultad"
            android:inputType="text"/>
        <EditText
            android:id="@+id/editEscuela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio"
            android:hint="@string/escuela"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_marginTop="@dimen/espacio"
            />


    </LinearLayout>

</RelativeLayout>